<resources>
    <string name="app_name">Tweet</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_register">login / register</string>
    <string name="profile">Profile</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="post">post</string>
    <string name="share_your_thoughts">Share your thoughts...</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="save">save</string>
    <string name="create_post">CREATE POST</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="update_profile">update profile</string>
    <string name="delete_account">Delete Account</string>
</resources>